# textgenerator

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
.github/workflows/tests.yam/: tests.yml
src/text_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/textgenerator/: __init__.py
tests/: test_main.py  test_numeric_generator.py  test_random_letter.py  test_string_generator.py  test_text_generator.py  test_word_generator.py
