[metadata]
name = text_generator
description = A text generator that allows control over the number of characters and word length of the text
author = Lucas Ferreira dos Santos
license = MIT
plataforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    textgenerator
python_requires = >=3.11
install_requires = 
    pyperclip>=1.8
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    mypy>=1.4
    pytest-cov>=4.0
    coverage>=7.2
    tox>=4.6

[options.package_data]
textgenerator = py.typed

[flake8]
max-line-length = 160
extend-ignore = W293